--- a/styles/style.css
+++ b/styles/style.css
@@ -49,6 +49,10 @@ img {
     backdrop-filter: blur(10px);
 }
 
+header, nav {
+    position: relative;
+    z-index: 9999;
+}
 
 nav {
     display: flex;
@@ -57,6 +61,7 @@ nav {
     padding: 10px 30px;
     width: auto;
     height: 76px;
+    z-index: 9999;
 }
 
 .logo {
@@ -94,20 +99,12 @@ nav ul li a {
   font-family: 'Poppins', sans-serif, Arial, Helvetica, sans-serif;
   display: inline-block;
   transition: all ease-in-out .1s;
-  -webkit-transition: all ease-in-out .1s;
-  -moz-transition: all ease-in-out .1s;
-  -ms-transition: all ease-in-out .1s;
-  -o-transition: all ease-in-out .1s;
 }
 
 nav ul li a:hover {
     /* border-bottom: #706262 2px solid; */
   color: #d4cdcd;
   transform: translateY(1px);
-  -webkit-transform: translateY(1px);
-  -moz-transform: translateY(1px);
-  -ms-transform: translateY(1px);
-  -o-transform: translateY(1px);
 }
 
 /* Navbar - Button */
@@ -155,6 +152,8 @@ nav ul li a:hover {
 .hamburger-icon {
     display: none; /* Hide by default */
     cursor: pointer;
+    position: relative;
+    z-index: 9999;
 }
 
 /* Section Hero */
@@ -167,7 +166,7 @@ nav ul li a:hover {
     background-size: cover;
     background-position: center;
     height: 100vh;
-    overflow: hidden;
+    /* overflow: hidden; */
     /* opacity: 0.5; */
 }
 
@@ -179,7 +178,7 @@ nav ul li a:hover {
   width: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 1;
-}
+ }
 
 .hero-content {
     display: flex;
